--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <title> Best Chocolate Chip Cookies </title>
 
-     <body>
+  <body>
 
 <h1>Best Chocolate Chip Cookies
   <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" /></h1>
@@ -16,17 +16,17 @@
     <h2>Ingredients</h2>
 
     <ul>
-      <li> Butter</li>
-      <li> White sugar</li>
-      <li> Brown sugar
-      <li> Eggs
-      <li> Vanilla</li>
-      <li> Flour</li>
-      <li> Baking soda</li>
-      <li> Salt</li>
-      <li>  Chocolate chips</li>
-      <li> Oatmeal</li>
-      <li> Coconut</li>
+      <li>Butter</li>
+      <li>White sugar</li>
+      <li>Brown sugar
+      <li>Eggs</li>
+      <li>Vanilla</li>
+      <li>Flour</li>
+      <li>Baking soda</li>
+      <li>Salt</li>
+      <li>Chocolate chips</li>
+      <li>Oatmeal</li>
+      <li>Coconut</li>
     </ul>
 
    <h2>Directions</h2>
@@ -41,6 +41,7 @@
        </ol>
 
 <p><a href="http://allrecipes.com">Click here</a> to check out my other great recipes.</p>
-
+  
+  </body>
 </html>
-</body>
+
